--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,704 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+/*
+! tailwindcss v3.1.4 | MIT License | https://tailwindcss.com
+*//*
+1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
+2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
+*/*,
+::before,
+::after {
+  box-sizing: border-box; /* 1 */
+  border-width: 0; /* 2 */
+  border-style: solid; /* 2 */
+  border-color: #e5e7eb; /* 2 */
+}::before,
+::after {
+  --tw-content: '';
+}/*
+1. Use a consistent sensible line-height in all browsers.
+2. Prevent adjustments of font size after orientation changes in iOS.
+3. Use a more readable tab size.
+4. Use the user's configured `sans` font-family by default.
+*/html {
+  line-height: 1.5; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
+  -moz-tab-size: 4; /* 3 */
+  -o-tab-size: 4;
+     tab-size: 4; /* 3 */
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* 4 */
+}/*
+1. Remove the margin in all browsers.
+2. Inherit line-height from `html` so users can set them as a class directly on the `html` element.
+*/body {
+  margin: 0; /* 1 */
+  line-height: inherit; /* 2 */
+}/*
+1. Add the correct height in Firefox.
+2. Correct the inheritance of border color in Firefox. (https://bugzilla.mozilla.org/show_bug.cgi?id=190655)
+3. Ensure horizontal rules are visible by default.
+*/hr {
+  height: 0; /* 1 */
+  color: inherit; /* 2 */
+  border-top-width: 0.0625rem; /* 3 */
+}/*
+Add the correct text decoration in Chrome, Edge, and Safari.
+*/abbr:where([title]) {
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
+}/*
+Remove the default font size and weight for headings.
+*/h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: inherit;
+  font-weight: inherit;
+}/*
+Reset links to optimize for opt-in styling instead of opt-out.
+*/a {
+  color: inherit;
+  text-decoration: inherit;
+}/*
+Add the correct font weight in Edge and Safari.
+*/b,
+strong {
+  font-weight: bolder;
+}/*
+1. Use the user's configured `mono` font family by default.
+2. Correct the odd `em` font sizing in all browsers.
+*/code,
+kbd,
+samp,
+pre {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}/*
+Add the correct font size in all browsers.
+*/small {
+  font-size: 80%;
+}/*
+Prevent `sub` and `sup` elements from affecting the line height in all browsers.
+*/sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}sub {
+  bottom: -0.25em;
+}sup {
+  top: -0.5em;
+}/*
+1. Remove text indentation from table contents in Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=999088, https://bugs.webkit.org/show_bug.cgi?id=201297)
+2. Correct table border color inheritance in all Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=935729, https://bugs.webkit.org/show_bug.cgi?id=195016)
+3. Remove gaps between table borders by default.
+*/table {
+  text-indent: 0; /* 1 */
+  border-color: inherit; /* 2 */
+  border-collapse: collapse; /* 3 */
+}/*
+1. Change the font styles in all browsers.
+2. Remove the margin in Firefox and Safari.
+3. Remove default padding in all browsers.
+*/button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  font-weight: inherit; /* 1 */
+  line-height: inherit; /* 1 */
+  color: inherit; /* 1 */
+  margin: 0; /* 2 */
+  padding: 0; /* 3 */
+}/*
+Remove the inheritance of text transform in Edge and Firefox.
+*/button,
+select {
+  text-transform: none;
+}/*
+1. Correct the inability to style clickable types in iOS and Safari.
+2. Remove default button styles.
+*/button,
+[type='button'],
+[type='reset'],
+[type='submit'] {
+  -webkit-appearance: button; /* 1 */
+  background-color: transparent; /* 2 */
+  background-image: none; /* 2 */
+}/*
+Use the modern Firefox focus style for all focusable elements.
+*/:-moz-focusring {
+  outline: auto;
+}/*
+Remove the additional `:invalid` styles in Firefox. (https://github.com/mozilla/gecko-dev/blob/2f9eacd9d3d995c937b4251a5557d95d494c9be1/layout/style/res/forms.css#L728-L737)
+*/:-moz-ui-invalid {
+  box-shadow: none;
+}/*
+Add the correct vertical alignment in Chrome and Firefox.
+*/progress {
+  vertical-align: baseline;
+}/*
+Correct the cursor style of increment and decrement buttons in Safari.
+*/::-webkit-inner-spin-button,
+::-webkit-outer-spin-button {
+  height: auto;
+}/*
+1. Correct the odd appearance in Chrome and Safari.
+2. Correct the outline style in Safari.
+*/[type='search'] {
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -0.125rem; /* 2 */
+}/*
+Remove the inner padding in Chrome and Safari on macOS.
+*/::-webkit-search-decoration {
+  -webkit-appearance: none;
+}/*
+1. Correct the inability to style clickable types in iOS and Safari.
+2. Change font properties to `inherit` in Safari.
+*/::-webkit-file-upload-button {
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
+}/*
+Add the correct display in Chrome and Safari.
+*/summary {
+  display: list-item;
+}/*
+Removes the default spacing and border for appropriate elements.
+*/blockquote,
+dl,
+dd,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+figure,
+p,
+pre {
+  margin: 0;
+}fieldset {
+  margin: 0;
+  padding: 0;
+}legend {
+  padding: 0;
+}ol,
+ul,
+menu {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}/*
+Prevent resizing textareas horizontally by default.
+*/textarea {
+  resize: vertical;
+}/*
+1. Reset the default placeholder opacity in Firefox. (https://github.com/tailwindlabs/tailwindcss/issues/3300)
+2. Set the default placeholder color to the user's configured gray 400 color.
+*/input::-moz-placeholder, textarea::-moz-placeholder {
+  opacity: 1; /* 1 */
+  color: #9ca3af; /* 2 */
+}input::placeholder,
+textarea::placeholder {
+  opacity: 1; /* 1 */
+  color: #9ca3af; /* 2 */
+}/*
+Set the default cursor for buttons.
+*/button,
+[role="button"] {
+  cursor: pointer;
+}/*
+Make sure disabled buttons don't get the pointer cursor.
+*/:disabled {
+  cursor: default;
+}/*
+1. Make replaced elements `display: block` by default. (https://github.com/mozdevs/cssremedy/issues/14)
+2. Add `vertical-align: middle` to align replaced elements more sensibly by default. (https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210)
+   This can trigger a poorly considered lint error in some tools but is included by design.
+*/img,
+svg,
+video,
+canvas,
+audio,
+iframe,
+embed,
+object {
+  display: block; /* 1 */
+  vertical-align: middle; /* 2 */
+}/*
+Constrain images and videos to the parent width and preserve their intrinsic aspect ratio. (https://github.com/mozdevs/cssremedy/issues/14)
+*/img,
+video {
+  max-width: 100%;
+  height: auto;
+}*, ::before, ::after {
+  --tw-border-spacing-x: 0;
+  --tw-border-spacing-y: 0;
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  --tw-pan-x:  ;
+  --tw-pan-y:  ;
+  --tw-pinch-zoom:  ;
+  --tw-scroll-snap-strictness: proximity;
+  --tw-ordinal:  ;
+  --tw-slashed-zero:  ;
+  --tw-numeric-figure:  ;
+  --tw-numeric-spacing:  ;
+  --tw-numeric-fraction:  ;
+  --tw-ring-inset:  ;
+  --tw-ring-offset-width: 0;
+  --tw-ring-offset-color: #fff;
+  --tw-ring-color: rgb(59 130 246 / 0.5);
+  --tw-ring-offset-shadow: 0 0 #0000;
+  --tw-ring-shadow: 0 0 #0000;
+  --tw-shadow: 0 0 #0000;
+  --tw-shadow-colored: 0 0 #0000;
+  --tw-blur:  ;
+  --tw-brightness:  ;
+  --tw-contrast:  ;
+  --tw-grayscale:  ;
+  --tw-hue-rotate:  ;
+  --tw-invert:  ;
+  --tw-saturate:  ;
+  --tw-sepia:  ;
+  --tw-drop-shadow:  ;
+  --tw-backdrop-blur:  ;
+  --tw-backdrop-brightness:  ;
+  --tw-backdrop-contrast:  ;
+  --tw-backdrop-grayscale:  ;
+  --tw-backdrop-hue-rotate:  ;
+  --tw-backdrop-invert:  ;
+  --tw-backdrop-opacity:  ;
+  --tw-backdrop-saturate:  ;
+  --tw-backdrop-sepia:  ;
+}::-webkit-backdrop {
+  --tw-border-spacing-x: 0;
+  --tw-border-spacing-y: 0;
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  --tw-pan-x:  ;
+  --tw-pan-y:  ;
+  --tw-pinch-zoom:  ;
+  --tw-scroll-snap-strictness: proximity;
+  --tw-ordinal:  ;
+  --tw-slashed-zero:  ;
+  --tw-numeric-figure:  ;
+  --tw-numeric-spacing:  ;
+  --tw-numeric-fraction:  ;
+  --tw-ring-inset:  ;
+  --tw-ring-offset-width: 0;
+  --tw-ring-offset-color: #fff;
+  --tw-ring-color: rgb(59 130 246 / 0.5);
+  --tw-ring-offset-shadow: 0 0 #0000;
+  --tw-ring-shadow: 0 0 #0000;
+  --tw-shadow: 0 0 #0000;
+  --tw-shadow-colored: 0 0 #0000;
+  --tw-blur:  ;
+  --tw-brightness:  ;
+  --tw-contrast:  ;
+  --tw-grayscale:  ;
+  --tw-hue-rotate:  ;
+  --tw-invert:  ;
+  --tw-saturate:  ;
+  --tw-sepia:  ;
+  --tw-drop-shadow:  ;
+  --tw-backdrop-blur:  ;
+  --tw-backdrop-brightness:  ;
+  --tw-backdrop-contrast:  ;
+  --tw-backdrop-grayscale:  ;
+  --tw-backdrop-hue-rotate:  ;
+  --tw-backdrop-invert:  ;
+  --tw-backdrop-opacity:  ;
+  --tw-backdrop-saturate:  ;
+  --tw-backdrop-sepia:  ;
+}::backdrop {
+  --tw-border-spacing-x: 0;
+  --tw-border-spacing-y: 0;
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  --tw-pan-x:  ;
+  --tw-pan-y:  ;
+  --tw-pinch-zoom:  ;
+  --tw-scroll-snap-strictness: proximity;
+  --tw-ordinal:  ;
+  --tw-slashed-zero:  ;
+  --tw-numeric-figure:  ;
+  --tw-numeric-spacing:  ;
+  --tw-numeric-fraction:  ;
+  --tw-ring-inset:  ;
+  --tw-ring-offset-width: 0;
+  --tw-ring-offset-color: #fff;
+  --tw-ring-color: rgb(59 130 246 / 0.5);
+  --tw-ring-offset-shadow: 0 0 #0000;
+  --tw-ring-shadow: 0 0 #0000;
+  --tw-shadow: 0 0 #0000;
+  --tw-shadow-colored: 0 0 #0000;
+  --tw-blur:  ;
+  --tw-brightness:  ;
+  --tw-contrast:  ;
+  --tw-grayscale:  ;
+  --tw-hue-rotate:  ;
+  --tw-invert:  ;
+  --tw-saturate:  ;
+  --tw-sepia:  ;
+  --tw-drop-shadow:  ;
+  --tw-backdrop-blur:  ;
+  --tw-backdrop-brightness:  ;
+  --tw-backdrop-contrast:  ;
+  --tw-backdrop-grayscale:  ;
+  --tw-backdrop-hue-rotate:  ;
+  --tw-backdrop-invert:  ;
+  --tw-backdrop-opacity:  ;
+  --tw-backdrop-saturate:  ;
+  --tw-backdrop-sepia:  ;
+}.absolute {
+  position: absolute;
+}.relative {
+  position: relative;
+}.bottom-0 {
+  bottom: 0;
+}.right-\[29px\] {
+  right: 1.8125rem;
+}.right-0 {
+  right: 0;
+}.left-0 {
+  left: 0;
+}.left-auto {
+  left: auto;
+}.left-\[40\] {
+  left: 40;
+}.left-\[40px\] {
+  left: 2.5rem;
+}.my-\[32px\] {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}.my-\[16px\] {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}.ml-\[24px\] {
+  margin-left: 1.5rem;
+}.mr-\[16px\] {
+  margin-right: 1rem;
+}.mr-\[24px\] {
+  margin-right: 1.5rem;
+}.mr-\[32px\] {
+  margin-right: 2rem;
+}.mt-\[24px\] {
+  margin-top: 1.5rem;
+}.mt-\[16px\] {
+  margin-top: 1rem;
+}.mr-\[8px\] {
+  margin-right: 0.5rem;
+}.mt-\[30px\] {
+  margin-top: 1.875rem;
+}.block {
+  display: block;
+}.flex {
+  display: flex;
+}.grid {
+  display: grid;
+}.hidden {
+  display: none;
+}.aspect-square {
+  aspect-ratio: 1 / 1;
+}.h-\[209px\] {
+  height: 13.0625rem;
+}.h-\[40px\] {
+  height: 2.5rem;
+}.min-h-screen {
+  min-height: 100vh;
+}.w-\[360px\] {
+  width: 22.5rem;
+}.w-\[1380px\] {
+  width: 86.25rem;
+}.w-1\/6 {
+  width: 16.666667%;
+}.w-\[209px\] {
+  width: 13.0625rem;
+}.w-\[40px\] {
+  width: 2.5rem;
+}.w-full {
+  width: 100%;
+}.w-\[312px\] {
+  width: 19.5rem;
+}.w-\[116px\] {
+  width: 7.25rem;
+}.w-\[32px\] {
+  width: 2rem;
+}.w-\[16px\] {
+  width: 1rem;
+}.grow {
+  flex-grow: 1;
+}.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}.cursor-pointer {
+  cursor: pointer;
+}.resize {
+  resize: both;
+}.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}.flex-row {
+  flex-direction: row;
+}.flex-col {
+  flex-direction: column;
+}.flex-wrap {
+  flex-wrap: wrap;
+}.items-start {
+  align-items: flex-start;
+}.items-center {
+  align-items: center;
+}.justify-start {
+  justify-content: flex-start;
+}.justify-center {
+  justify-content: center;
+}.justify-items-center {
+  justify-items: center;
+}.space-x-\[8px\] > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}.space-y-\[16px\] > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}.overflow-x-hidden {
+  overflow-x: hidden;
+}.rounded-\[8px\] {
+  border-radius: 0.5rem;
+}.rounded-full {
+  border-radius: 624.9375rem;
+}.bg-pink-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 168 212 / var(--tw-bg-opacity));
+}.bg-\[\#FFCA41\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 202 65 / var(--tw-bg-opacity));
+}.bg-\[\#EC3A47\]\/\[0\.08\] {
+  background-color: rgb(236 58 71 / 0.08);
+}.bg-\[\#EC3A47\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(236 58 71 / var(--tw-bg-opacity));
+}.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}.p-\[30px\] {
+  padding: 1.875rem;
+}.px-\[56px\] {
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
+}.px-\[6px\] {
+  padding-left: 0.375rem;
+  padding-right: 0.375rem;
+}.py-\[6px\] {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}.px-\[10px\] {
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
+}.py-\[3px\] {
+  padding-top: 0.1875rem;
+  padding-bottom: 0.1875rem;
+}.px-\[3px\] {
+  padding-left: 0.1875rem;
+  padding-right: 0.1875rem;
+}.py-\[12px\] {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}.px-\[32px\] {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}.px-\[16px\] {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}.text-center {
+  text-align: center;
+}.font-\[Lato\] {
+  font-family: Lato;
+}.font-\[Nunito-Bold\] {
+  font-family: Nunito-Bold;
+}.text-\[24px\] {
+  font-size: 1.5rem;
+}.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}.text-\[14px\] {
+  font-size: 0.875rem;
+}.text-\[16px\] {
+  font-size: 1rem;
+}.font-semibold {
+  font-weight: 600;
+}.font-normal {
+  font-weight: 400;
+}.font-bold {
+  font-weight: 700;
+}.font-\[700\] {
+  font-weight: 700;
+}.leading-\[32px\] {
+  line-height: 2rem;
+}.leading-\[24px\] {
+  line-height: 1.5rem;
+}.leading-\[28px\] {
+  line-height: 1.75rem;
+}.tracking-\[1\.25px\] {
+  letter-spacing: 1.25px;
+}.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}.text-\[\#EC3A47\] {
+  --tw-text-opacity: 1;
+  color: rgb(236 58 71 / var(--tw-text-opacity));
+}.text-\[\#1E293B\] {
+  --tw-text-opacity: 1;
+  color: rgb(30 41 59 / var(--tw-text-opacity));
+}@font-face {
+    font-family: Nunito-Regular;
+    src: url(fonts/Nunito/static/Nunito-Regular.ttf);
+    font-weight: 700;
+  }@font-face {
+    font-family: Nunito-Bold;
+    src: url(fonts/Nunito/static/Nunito-Bold.ttf);
+    font-weight: 700;
+  }@font-face {
+    font-family: Nunito;
+    src: url(fonts/Nunito/Nunito-VariableFont_wght.ttf);
+    font-weight: 700;
+  }@font-face {
+    font-family: Lato;
+    src: url(fonts/Lato-Regular.ttf);
+    font-weight: 400;
+  }@media (min-width: 640px) {.sm\:relative {
+    position: relative;
+  }.sm\:space-y-\[16px\] > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+  }.sm\:py-\[24px\] {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+}@media (min-width: 768px) {.md\:absolute {
+    position: absolute;
+  }.md\:left-\[40px\] {
+    left: 2.5rem;
+  }.md\:m-\[40px\] {
+    margin: 2.5rem;
+  }.md\:mx-\[40px\] {
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
+  }.md\:block {
+    display: block;
+  }.md\:flex {
+    display: flex;
+  }.md\:hidden {
+    display: none;
+  }.md\:h-\[152px\] {
+    height: 9.5rem;
+  }.md\:w-\[664px\] {
+    width: 41.5rem;
+  }.md\:w-\[152px\] {
+    width: 9.5rem;
+  }.md\:w-\[35px\] {
+    width: 2.1875rem;
+  }.md\:w-full {
+    width: 100%;
+  }.md\:w-max {
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+  }.md\:justify-start {
+    justify-content: flex-start;
+  }.md\:justify-between {
+    justify-content: space-between;
+  }.md\:space-x-\[32px\] > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(2rem * var(--tw-space-x-reverse));
+    margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+  }.md\:space-x-\[16px\] > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1rem * var(--tw-space-x-reverse));
+    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+  }.md\:space-y-\[44px\] > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(2.75rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(2.75rem * var(--tw-space-y-reverse));
+  }.md\:p-\[40px\] {
+    padding: 2.5rem;
+  }
+}@media (min-width: 1280px) {.xl\:absolute {
+    position: absolute;
+  }.xl\:relative {
+    position: relative;
+  }.xl\:right-\[21px\] {
+    right: 1.3125rem;
+  }.xl\:left-auto {
+    left: auto;
+  }.xl\:my-\[32px\] {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }.xl\:mx-\[24px\] {
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+  }.xl\:mx-\[56px\] {
+    margin-left: 3.5rem;
+    margin-right: 3.5rem;
+  }.xl\:ml-\[16px\] {
+    margin-left: 1rem;
+  }.xl\:mt-\[32px\] {
+    margin-top: 2rem;
+  }.xl\:mt-\[24px\] {
+    margin-top: 1.5rem;
+  }.xl\:flex {
+    display: flex;
+  }.xl\:hidden {
+    display: none;
+  }.xl\:h-\[209px\] {
+    height: 13.0625rem;
+  }.xl\:w-\[1280px\] {
+    width: 80rem;
+  }.xl\:w-\[209px\] {
+    width: 13.0625rem;
+  }.xl\:w-\[40px\] {
+    width: 2.5rem;
+  }.xl\:w-\[20px\] {
+    width: 1.25rem;
+  }.xl\:grid-cols-6 {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
+  }.xl\:space-x-\[24px\] > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+    margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+  }.xl\:space-x-\[32px\] > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(2rem * var(--tw-space-x-reverse));
+    margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+  }.xl\:space-y-\[32px\] > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+  }.xl\:rounded-\[24px\] {
+    border-radius: 1.5rem;
+  }.xl\:pt-\[32px\] {
+    padding-top: 2rem;
+  }
+}
+
+  
